--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,6 +2,9 @@ $accent: #555555;
 $title: #000000;
 $default: #222222;
 $brown: #402F2C;
+$footer: #fafafa;
+$button: rgba(64, 47, 44, 1);
+$white: #ffffff;
 
 %redhat-400 {
   font-family: 'RedHatDisplay-Regular', sans-serif;
