added product slider without button

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -22,3 +22,10 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.title {
+  @extend %redhat-500;
+  font-size: 56px;
+  line-height: 1.25;
+  color: $title;
+}
