--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,6 +2,7 @@ $accent: #555555;
 $title: #000000;
 $default: #222222;
 $brown: #402F2C;
+$header: #F9F6F5;
 $footer: #fafafa;
 $button: rgba(64, 47, 44, 1);
 $white: #ffffff;
