--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,11 +2,13 @@
 @import 'fonts';
 @import 'vars';
 @import 'global';
+@import 'libs';
 @import 'form';
 
 
 // header
 .header {
+  background-color: $header;
 
   &__inner {
     padding: 40px 0 68px;
@@ -83,7 +85,6 @@
 .footer-bottom {
   display: flex;
   justify-content: space-between;
-  // align-items: center;
   padding: 0 103px;
 
   .logo {
@@ -100,8 +101,6 @@
     line-height: 1.78;
   }
 
-  &__quick {}
-
   &__title {
     @extend %redhat-500;
     color: $default;
@@ -109,10 +108,6 @@
     line-height: 1.2;
     margin: 24px 0 30px;
   }
-
-  &__list {}
-
-  &__item {}
 
   &__links {
     display: inline-block;
@@ -122,8 +117,6 @@
     margin-bottom: 14px;
   }
 
-  &__contacts {}
-
   &__social {
     display: flex;
   }
@@ -131,9 +124,58 @@
   &__social-item {
     margin-right: 27px;
   }
-
-  &__social-link {}
 }
+
+// product-slider
+
+.product-slider {
+  background-color: $header;    
+
+  &__inner {  
+   
+  }
+
+  &__slide {
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: contain;    
+    height: 609px;   
+  }  
+
+  &__content {
+    position: relative;
+    padding-top: 40px;
+    z-index: 1;
+  }
+
+  &__title {
+    max-width: 621px;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  &__text {
+    max-width: 516px;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  &__button {
+    cursor: pointer;
+    border: none;
+    width: 148px;    
+    background-color: $brown;
+    @extend %redhat-500;
+    font-size: 18px;
+    line-height: 1.33;
+    color: $white;
+    padding: 16px 32px;
+  }
+  
+}
+
+
+
 
 
 
