--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -129,7 +129,14 @@
 // product-slider
 
 .product-slider {
-  background-color: $header;      
+  background-color: $header; 
+
+  &__inner {
+    max-width: 1470px;  
+    padding: 0 15px;   
+    margin: 0 auto;
+  }
+  
   
   &__slide {
     background-repeat: no-repeat;
@@ -178,11 +185,8 @@
  bottom: 50px; 
  z-index: 2; 
  font-size: 0; 
- width: 40px; 
- height: 40px; 
  border: none;
- cursor: pointer;
- 
+ cursor: pointer; 
 }
 
 .slick-prev {
@@ -204,10 +208,135 @@
 }
 
 
+// partners
 
+.partners {
+  padding: 130px 0;
 
+  &__inner {
+    padding: 30px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-top: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+  }
 
+  &__img {
+    margin: 13px;
+  }
+}
 
+// popular
+
+.popular {
+
+  &__inner {}
+}
+
+.popular-top {
+  margin-bottom: 60px;
+
+  &__title {
+    margin-bottom: 20px;
+  }
+
+  &__box {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__descr {
+    max-width: 714px;
+    width: 100%;
+  }
+
+  &__link {
+    display: inline-flex;
+    @extend %redhat-500;
+    font-size: 24px;
+    line-height: 1.25;
+    color: $default;
+    padding-right: 35px;
+    text-decoration: underline;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      background-image: url(../images/icons/arrow.svg);
+      width: 24px;
+      height: 24px;
+      right: 0;
+      top: 3px;
+    }   
+  }
+}
+
+.popular-content {
+ display: flex; 
+ 
+
+  &__item {
+    border: 1px solid rgba(104, 90, 82, 0.19);
+
+    &+.popular-content__item {
+      margin-left: 40px;
+    }
+  }
+
+  &__img {
+    margin-bottom: 20px;   
+  }
+
+  &__title {
+    margin: 0 52px 16px 32px;   
+  }
+
+  &__title-link { 
+    @extend %redhat-500;
+    font-size: 40px;
+    line-height: 1.5;
+    color: $default;
+  }
+
+  &__descr {
+    margin: 0 52px 48px 32px;
+  }
+
+  &__box {
+    padding: 0 32px 32px;
+    display: flex;    
+    align-items: center;
+  }
+
+  &__btn-buy,
+  &__btn-add {
+    padding: 16px 32px;  
+    @extend %redhat-500;
+    font-size: 18px;
+    line-height: 1.3;
+    cursor: pointer;    
+  }
+
+  &__btn-buy {
+    border: none;
+    background-color: $brown;
+    color: $white;
+  }
+
+  &__btn-add {    
+    border: 1px solid rgba(104, 90, 82, 0.46);
+    background-color: $white;
+    color: $brown;
+    margin-left: 24px;
+  }
+
+  &__price {
+    margin-left: auto;
+  }
+}
 
 
 
