--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -5,4 +5,4 @@
 // @import '../../node_modules/jquery-form-styler/dist/jquery.formstyler';
 // @import '../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme'
 
-// @import '../../node_modules/swiper/swiper-bundle';
+@import '../../node_modules/swiper/swiper-bundle';
