--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -6,6 +6,7 @@ $header: #F9F6F5;
 $footer: #fafafa;
 $button: rgba(64, 47, 44, 1);
 $white: #ffffff;
+$beige: #FDF8F5;
 
 %redhat-400 {
   font-family: 'RedHatDisplay-Regular', sans-serif;
