--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -35,6 +35,7 @@ body {
   border: none;
   width: 148px;
   background-color: $brown;
+  border: 1px solid rgba(104, 90, 82, 0.19);
   @extend %redhat-500;
   font-size: 18px;
   line-height: 1.33;
