--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -85,7 +85,7 @@
 .footer-bottom {
   display: flex;
   justify-content: space-between;
-  padding: 0 103px;
+  padding: 0 95px;
 
   .logo {
     display: inline-block;
@@ -94,6 +94,10 @@
 
   &__descr {
     width: 328px;
+  } 
+
+  &__contacts {
+    margin-right: 15px;
   }
 
   &__text {
@@ -129,21 +133,21 @@
 // product-slider
 
 .product-slider {
-  background-color: $header; 
+  background-color: $header;
 
   &__inner {
-    max-width: 1470px;  
-    padding: 0 15px;   
+    max-width: 1470px;
+    padding: 0 15px;
     margin: 0 auto;
   }
-  
-  
+
+
   &__slide {
     background-repeat: no-repeat;
-    background-position: right;   
-    background-size: contain;    
-    height: 609px;   
-  }  
+    background-position: right;
+    background-size: contain;
+    height: 609px;
+  }
 
   &__content {
     position: relative;
@@ -161,24 +165,24 @@
     max-width: 516px;
     width: 100%;
     margin-bottom: 30px;
-  } 
+  }
 }
 
 .slider {
- position: relative;
+  position: relative;
 }
 
 .slick-arrow {
- position: absolute;
- bottom: 50px; 
- z-index: 2; 
- font-size: 0; 
- border: none;
- cursor: pointer; 
+  position: absolute;
+  bottom: 50px;
+  z-index: 2;
+  font-size: 0;
+  border: none;
+  cursor: pointer;
 }
 
 .slick-prev {
-  left: 47%; 
+  left: 47%;
   background: url('../images/icons/left-arrow.svg');
   width: 40px;
   height: 40px;
@@ -187,7 +191,7 @@
 }
 
 .slick-next {
-  left: 50%; 
+  left: 50%;
   background: url('../images/icons/right-arrow.svg');
   width: 40px;
   height: 40px;
@@ -199,7 +203,7 @@
 // partners
 
 .partners {
-  padding: 128px 0;
+  padding: 128px 0 64px;
 
   &__inner {
     padding: 30px 0;
@@ -219,7 +223,7 @@
 // popular
 
 .popular {
-  padding-bottom: 130px; 
+  padding: 64px 0 130px;
 }
 
 .popular-top {
@@ -239,7 +243,7 @@
     width: 100%;
   }
 
-  &__link {    
+  &__link {
     @extend %redhat-500;
     font-size: 24px;
     line-height: 1.25;
@@ -256,13 +260,13 @@
       height: 24px;
       right: 0;
       top: 3px;
-    }   
+    }
   }
 }
 
 .popular-content {
- display: flex; 
-  
+  display: flex;
+
   &__item {
     display: flex;
     flex-direction: column;
@@ -275,15 +279,15 @@
   }
 
   &__img {
-    margin-bottom: 20px;   
+    margin-bottom: 20px;
     object-fit: cover;
   }
 
   &__title {
-    margin: 0 28px 16px;   
+    margin: 0 28px 16px;
   }
 
-  &__title-link { 
+  &__title-link {
     @extend %redhat-500;
     font-size: 40px;
     line-height: 1.5;
@@ -296,17 +300,17 @@
 
   &__box {
     margin: auto 28px 31px;
-    display: flex;    
+    display: flex;
     align-items: center;
   }
 
   &__btn-buy,
   &__btn-add {
-    padding: 16px 32px;  
+    padding: 16px 32px;
     @extend %redhat-500;
     font-size: 18px;
     line-height: 1.3;
-    cursor: pointer;    
+    cursor: pointer;
   }
 
   &__btn-buy,
@@ -316,13 +320,13 @@
     color: $white;
     border: 1px solid rgba(104, 90, 82, 0.46);
 
-    &:hover {     
+    &:hover {
       background-color: $white;
       color: $brown;
     }
   }
 
-  &__btn-add {        
+  &__btn-add {
     margin-left: 24px;
   }
 
@@ -338,14 +342,14 @@
 // advantages
 
 .advantages {
-  background-color: $beige; 
+  background-color: $beige;
 
- &__inner {
-   padding: 58px 0;
-   display: flex;   
-   text-align: center;
-   justify-content: space-around;  
-  } 
+  &__inner {
+    padding: 58px 0;
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+  }
 
   &__item-num {
     display: inline-block;
@@ -369,7 +373,7 @@
 .about {
 
   &__inner {
-    padding: 130px 0;
+    padding: 130px 0 65px;
     display: flex;
     align-items: center;
   }
@@ -397,6 +401,110 @@
     object-fit: cover;
   }
 }
+
+// response
+
+.response {
+
+  &__inner {
+    position: relative;
+    max-width: 1350px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+
+  &__wrapper {
+    padding: 65px 0 130px;
+  }
+
+  &__slide {
+    display: flex;
+  }
+
+  &__img {
+    margin-right: 57px;
+    object-fit: cover;
+  }
+
+  &__content {
+    padding-top: 28px;
+  }
+
+  &__content-title {
+    @extend %redhat-500;
+    font-size: 30px;
+    line-height: 1.33;
+    color: $default;
+    margin-bottom: 12px;
+  }
+
+  &__content-stars {
+    margin-bottom: 44px;
+  }
+
+  &__content-text {
+    position: relative;
+    margin-bottom: 80px;
+    max-width: 625px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      background-image: url(../images/icons/start-quotes.svg);
+      width: 17px;
+      height: 15px;
+      left: -17px;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      background-image: url(../images/icons/end-quotes.svg);
+      width: 17px;
+      height: 15px;
+    }
+  }
+
+  &__content-name {
+    @extend %redhat-500;
+    font-size: 30px;
+    line-height: 1.33;
+    color: $default;
+    margin-bottom: 10px;
+  }
+
+  &__content-proffesion {
+    line-height: 1.2;
+  }
+
+  &__button-prev,
+  &__button-next {
+    position: absolute;  
+    top: 525px;
+    color: #6FB587;
+    width: 32px;
+    height: 32px;
+    border: 1px solid #6FB587;
+    border-radius: 50%;
+
+    --swiper-navigation-size: 16px;
+  }
+
+
+  &__button-prev {   
+    left: 655px;
+  }
+        
+  &__button-next {    
+    left: 705px;     
+  }
+}
+
+
+
+
+
+
 
 
 
