--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -74,3 +74,34 @@
     cursor: pointer;   
   } 
 }
+
+@media (max-width: $xl) {
+
+  .product-slider {    
+
+    &__form {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: $md) {
+
+  .product-slider {
+
+    &__form {
+      margin-bottom: 20px;
+    }
+  }
+}
+
+@media (max-width: $sm) {
+
+  .product-slider {
+
+    &__form,
+    &__input {
+      width: 100%;
+    }
+  }
+}
